jmeter-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jmeter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: distributedjm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jmeter-ingress-service
                port:
                  name: http
